WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119358
Reuse of XMLHttpRequests causes character corruption in response text
https://bugs.webkit.org/show_bug.cgi?id=119358
Summary
Reuse of XMLHttpRequests causes character corruption in response text
Ryosuke Niwa
Reported
2013-07-31 16:42:11 PDT
Merge
https://chromiumcodereview.appspot.com/20625004
XMLHttpRequest should clear the response encoding if it clears responseText. XMLHttpRequest did not clear the response encoding when it have should, for example, when abort() is called. This caused character corruption in responseText if we re-opened the XHR object.
Attachments
Fixes the bug
(5.80 KB, patch)
2013-07-31 16:55 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-07-31 16:42:45 PDT
<
rdar://problem/14612613
>
Ryosuke Niwa
Comment 2
2013-07-31 16:55:34 PDT
Created
attachment 207887
[details]
Fixes the bug
WebKit Commit Bot
Comment 3
2013-07-31 17:50:25 PDT
Comment on
attachment 207887
[details]
Fixes the bug Clearing flags on attachment: 207887 Committed
r153553
: <
http://trac.webkit.org/changeset/153553
>
WebKit Commit Bot
Comment 4
2013-07-31 17:50:27 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 5
2013-12-18 19:29:00 PST
(In reply to
comment #0
)
> Merge
https://chromiumcodereview.appspot.com/20625004
Issue 261140: Reuse of XMLHttpRequests causes character corruption in response text
https://code.google.com/p/chromium/issues/detail?id=261140
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug