Reuse of XMLHttpRequests causes character corruption in response text https://bugs.webkit.org/show_bug.cgi?id=119358

Reviewed by Anders Carlsson.

Source/WebCore:

Merge https://chromium.googlesource.com/chromium/blink/+/6496e7bb9a0b46bc79032b86d5993b25f127a4cb

Test: http/tests/xmlhttprequest/reopen-encoding.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::clearResponseBuffers):
(WebCore::XMLHttpRequest::didFinishLoading):

LayoutTests:

* http/tests/xmlhttprequest/reopen-encoding-expected.txt: Added.
* http/tests/xmlhttprequest/reopen-encoding.html: Added.
* http/tests/xmlhttprequest/resources/get-utf-8.cgi: Added.
* http/tests/xmlhttprequest/resources/get-windows-1251.cgi: Added.


Canonical link: https://commits.webkit.org/137312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153553 268f45cc-cd09-0410-ab3c-d52691b4dbfc